# gtfs-rt-visualization

./: .gitignore  README.md
.github/workflows/: static.yaml
backend/: main.py  models.py  pyproject.toml
backend/examples/: README.md
backend/examples/BasicGTFS/: README.md  agency.txt  calendar.txt  feed_info.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
backend/examples/GTFS-Flex/: README.md  agency.txt  calendar.txt  feed_info.txt  locations.geojson  routes.txt  stop_times.txt  stops.txt  trips.txt
backend/examples/GTFS-Realtime/: README.md
frontend/: pnpm-lock.yaml  vite.config.ts
