[project]
name = "backend"
version = "0.1.0"
description = "GTFS API Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi[standard]>=0.116.1", "uvicorn[standard]>=0.35.0"]

[dependency-groups]
dev = ["ruff>=0.13.0"]

[tool.ruff]
# ファイルの行数制限
line-length = 88
# 対象ファイル
target-version = "py313"

[tool.ruff.lint]
# 有効にするルール
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
]

[tool.ruff.lint.isort]
# ローカルモジュールをfirst-party扱いにする
known-first-party = ["models", "gtfs_loader"]
# import順序の設定
force-single-line = false
force-sort-within-sections = true
# importセクションの分離
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
